syntax = "proto3";

package pbcalendar;

service MyCalendar {
    rpc CreateEvent (CreateEventRequest) returns (CreateEventResponse);
    rpc DeleteEvent (DeleteEventRequest) returns (DeleteEventResponse);
    rpc MoveEvent (MoveEventRequest) returns (MoveEventResponse);
    rpc EventsForDay(EventsForDayRequest) returns (Count);
    rpc EventsForMonth(EventsForMonthRequest) returns (Count);
    rpc EventsForWeek(EventsForWeekRequest) returns (Count);
    rpc SinceEvents(SinceEventsRequest) returns (SinceEventsResponse);
}

message CreateEventRequest {
    Date alerttime = 1;
    string information = 2;
}

message CreateEventResponse {
    string status  = 1;
}

message DeleteEventRequest {
    Date alerttime = 1;
    string information = 2;
}

message DeleteEventResponse {
    string status  = 1;
}

message MoveEventRequest {
    Date alerttime = 1;
    string information = 2;
    Date newdate = 3;
}

message MoveEventResponse {
    string status  = 1;
}

message SinceEventsRequest {
    Date from = 1;
}

message SinceEvent {
    Date alerttime = 1;
    string information = 2;
}

message SinceEventsResponse {
    repeated SinceEvent events = 1;
}

message Count {
    int32 count = 1;
}

message Date {
    int32 Year = 1;
    int32 Month = 2;
    int32 Day = 3;
    int32 Hour = 4;
    int32 Minute = 5;
    int32 Second = 6;
}

message EventsForDayRequest {
    int32 Year = 1;
    int32 Month = 2;
    int32 Day = 3;
}

message EventsForWeekRequest {
    int32 Year = 1;
    int32 Week = 2;
}

message EventsForMonthRequest {
    int32 Year = 1;
    int32 Month = 2;
}
